+ Fixed header extra space in bottom + Fixed profilepic not showing up

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -36,7 +36,7 @@ body {
 
 header {
    position: relative;
-   height: 800px;
+   height: 100vh;
    min-height: 500px;
    width: 100%;
    text-align: center;
